Closed Bug 178404 Opened 23 years ago Closed 23 years ago

--enable-ctl in configure will cause Mozilla gtk2 build fail

Categories

(Core :: Layout: Text and Fonts, defect)

Sun
Solaris
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: yinbolian, Assigned: jay.yan)

References

Details

Attachments

(1 file)

Blocks: gtk2
let me take it.
Assignee: prabhat.hegde → jay.yan
there are 2 errors: 1 redefine gunichar and gunichar2 if build mozilla with redhat8.0 output is: make[3]: Entering directory `/home/jay/work/mozilla/gtk2/mozilla/intl/ctl' make[4]: Entering directory `/home/jay/work/mozilla/gtk2/mozilla/intl/ctl/public' make[4]: Leaving directory `/home/jay/work/mozilla/gtk2/mozilla/intl/ctl/public' make[4]: Entering directory `/home/jay/work/mozilla/gtk2/mozilla/intl/ctl/src/pangoLite' glyphstring.c gcc -o glyphstring.o -c -DOSTYPE=\"Linux2.4\" -DOSARCH=\"Linux\" -DOJI -I../../../../dist/include/mozpango -I../../../../dist/include -I/home/jay/work/mozilla/gtk2/mozilla/dist/include/nspr -I/usr/X11R6/include -fPIC -I/usr/X11R6/include -Wall -W -Wno-unused -Wpointer-arith -Wcast-align -pedantic -Wno-long-long -pthread -pipe -DDEBUG -D_DEBUG -DDEBUG_jay -DTRACING -g -fno-inline -I/usr/include/gtk-2.0 -I/usr/lib/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/pango-1.0 -I/usr/include/Xft2 -I/usr/include/freetype2 -I/usr/X11R6/include -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/X11R6/include -include ../../../../mozilla-config.h -DMOZILLA_CLIENT -Wp,-MD,.deps/glyphstring.pp glyphstring.c In file included from pango-glyph.h:38, from glyphstring.c:36: pango-types.h:79: redefinition of `gunichar' /usr/include/glib-2.0/glib/gunicode.h:30: `gunichar' previously declared here pango-types.h:80: redefinition of `gunichar2' /usr/include/glib-2.0/glib/gunicode.h:31: `gunichar2' previously declared here glyphstring.c: In function `pango_glyph_string_set_size': glyphstring.c:67: warning: ISO C forbids braced-groups within expressions make[4]: *** [glyphstring.o] Error 1 make[4]: Leaving directory `/home/jay/work/mozilla/gtk2/mozilla/intl/ctl/src/pangoLite' make[3]: *** [libs] Error 2 make[3]: Leaving directory `/home/jay/work/mozilla/gtk2/mozilla/intl/ctl' make[2]: *** [libs] Error 2 make[2]: Leaving directory `/home/jay/work/mozilla/gtk2/mozilla/intl' make[1]: *** [tier_9] Error 2 make[1]: Leaving directory `/home/jay/work/mozilla/gtk2/mozilla' make: *** [default] Error 2 2 /intl/ctl/src/hindiShaper can not find where glib is, the output is "dvng-x.c", line 23: cannot find include file: <glib.h> "../pangoLite/pango-types.h", line 38: cannot find include file: <glib.h> "../pangoLite/pango-types.h", line 47: warning: no explicit type given "../pangoLite/pango-types.h", line 47: syntax error before or at: PangoGlyph "../pangoLite/pango-types.h", line 47: warning: old-style declaration or incorrect type for: PangoGlyph "../pangoLite/pango-types.h", line 63: syntax error before or at: gint "../pangoLite/pango-types.h", line 69: incomplete struct/union/enum _PangoAnalysis: PangoAnalysis "../pangoLite/pango-types.h", line 72: (struct) tag redeclared: _PangoAn
Attached patch patchSplinter Review
a simple patch. it: 1 disables the redefine in pango-types.h while MOZ_WIDGET_GTK2 is set. 2 tells intl/ctl/src/hinderShaper where to search glib while gtk2 is turned on.
seawood, Can you r=? thanks
Attachment #105952 - Attachment is patch: true
Attachment #105952 - Flags: review+
thanks to seawood, checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Component: Layout: CTL → Layout: Text
QA Contact: arthit.suriyawongkul → layout.fonts-and-text
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: