bug 178404, --enable-ctl in configure will cause mozilla gtk2 build fail, r=seawood